--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.4.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.50.1",
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.3.0",
